jvm Run-time Data Area and GC learn note